<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="str_app_name">crescendo</string>
    <string name="str_action_settings">Settings</string>
    <string name="str_manage_plan">목표 관리</string>
    <string name="str_view_current_status">현 상태 보기</string>
    <string name="str_manage_friends_list">친구 관리</string>
    <string name="str_manage_widget">위젯 관리</string>
    <string name="str_manage_settings">환경 설정</string>
    <string name="str_title_activity_plans_list">PlansListActivity</string>
    <string name="str_planEditor_title">제목</string>
    <string name="str_planEditor_startdate">시작일</string>
    <string name="str_planEditor_endDate">완료일</string>
    <string name="str_planEditor_repeatPeriod">반복주기</string>
    <string name="str_monday">월</string>
    <string name="str_tuesday">화</string>
    <string name="str_wednesday">수</string>
    <string name="str_thursday">목</string>
    <string name="str_friday">금</string>
    <string name="str_saturday">토</string>
    <string name="str_sunday">일</string>
    <string name="str_ID">ID</string>
    <string name="str_PW">Password</string>
    <string name="str_PhoneNumber">Phone Number</string>
    <string name="str_birthday">생일</string>
    <string name="str_newregister">회원가입</string>
    <string name="str_save">저장</string>
    <string name="str_newPlan">신규 플랜 추가</string>
    <string name="str_login">로그인</string>
    <string name="str_title_welcome">환영합니다!</string>
    <string name="str_register">등록</string>
    <string name="str_input_register_information">회원 가입에 필요한 정보를 입력해 주세요.</string>

</resources>