<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/backgroud_red"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".MainActivity" >

    <Button
        android:id="@+id/main_view_status"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/main_plans_list"
        android:layout_below="@+id/main_plans_list"
        android:layout_marginTop="20dp"
        android:text="@string/str_view_current_status" />

    <Button
        android:id="@+id/main_manage_settings"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/main_manage_widget"
        android:layout_below="@+id/main_manage_widget"
        android:layout_marginTop="20dp"
        android:text="@string/str_manage_settings" />

    <Button
        android:id="@+id/main_plans_list"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="52dp"
        android:text="@string/str_manage_plan" />

    <Button
        android:id="@+id/main_friends_list"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/main_view_status"
        android:layout_centerVertical="true"
        android:text="@string/str_manage_friends_list" />

    <Button
        android:id="@+id/main_manage_widget"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/main_friends_list"
        android:layout_below="@+id/main_friends_list"
        android:layout_marginTop="20dp"
        android:text="@string/str_manage_widget" />

</RelativeLayout>